﻿zg 26.04.2015 00:40:10 +0200 - build 4358

1. уточнение 4353.2: Отпускание модификатора может быть воспринято как BreakKey для меню.

drkns 25.04.2015 23:44:26 +0200 - build 4357

1. Уточнение 4356.

drkns 25.04.2015 22:27:47 +0200 - build 4356

1. Рефакторинг.

zg 23.04.2015 12:54:15 +0200 - build 4355

1. уточнение 4352 для FarInputRecordToName.

zg 23.04.2015 02:01:09 +0200 - build 4354

1. уточнение 4345: не работал xlat в редакторе.

zg 22.04.2015 21:26:13 +0200 - build 4353

1. DM_SETMOUSEEVENTNOTIFY переименована в DM_SETINPUTNOTIFY.

2. в DN_INPUT теперь приходят все события консоли.

zg 22.04.2015 14:23:46 +0200 - build 4352

1. уточнение 4337: фар реагирует на отжатия модификаторов. 

drkns 15.04.2015 22:47:32 +0200 - build 4351

1. 0002872: Не ломать кодовую страницу файла FarMenu.ini

2. Связанный с #1 рефакторинг.

w17 14.04.2015 15:03:44 +0300 - build 4350

1. Откат 4324+, невостребованная фича.

drkns 13.04.2015 14:09:29 +0200 - build 4349

1. В истории могли дублироваться элементы (баг в sqlite_unicode.c)

zg 13.04.2015 13:27:28 +0200 - build 4348

1. уточнение 4337: ralt не включает фильтр в меню.

drkns 13.04.2015 10:40:22 +0200 - build 4347

1. Уточнение 4309.

drkns 13.04.2015 09:52:11 +0200 - build 4346

1. Уточнение 4345.

drkns 12.04.2015 22:26:53 +0200 - build 4345

1. Рефакторинг.

drkns 12.04.2015 21:02:09 +0200 - build 4344

1. По мотивам http://forum.farmanager.com/viewtopic.php?f=9&t=9034:
   - Экспериментально: добавлена поддержка юникода в SQLite, работа с базами теперь может вестись регистронезависимо.
   - Запоминание позиции в просмотре/редакторе производится регистронезависимо.
   - Для того, чтобы это работало адекватно, history.db надо удалить, или, если жалко, обновить по инструкции в вышеуказанном топике.
   - Если это актуально ещё где-то, кроме запоминания позиций в просмотре/редакторе - пишите.

zg 12.04.2015 19:46:28 +0200 - build 4343

1. уточнение 4332: смена кодировки в редакторе.
